[metadata]
name = perock
version = 0.0.1
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Simple python bruteforce attack library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sekgobela-Kevin/perock
project_urls =
    Bug Tracker = https://github.com/Sekgobela-Kevin/perock/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = source
packages = find:
install_requires =

# typing hints not supported in python<3.5
python_requires = >=3.5

[options.packages.find]
where = source
