[metadata]
name = perock
#version = attr: package.__version__
version = 0.0.3
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Simple general purpose python bruteforce library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sekgobela-Kevin/perock
project_urls =
    Bug Tracker = https://github.com/Sekgobela-Kevin/perock/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    attack
    bruteforce 
    hacking
    multithreading 
    asynchronous

[options]
package_dir =
    = source
packages = find:
install_requires =
    prodius
    forcetable>=0.0.4 

# typing hints seems not to work in python<=3.5
python_requires = >=3.6

[options.packages.find]
where=source
exclude=
    examples*
    docs*
    tests*