[metadata]
name = perock
#version = attr: package.__version__
version = 0.2.2
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Simple general purpose python bruteforce library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/perock
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/perock/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    attack
    bruteforce 
    security
    testing
    hacking
    multithreading 
    asyncio

[options]
package_dir =
    = source
packages = find:
install_requires =
    prodius<0.1.0
    forcetable>=0.0.4, <0.1.0

# typing hints seems not to work in python<=3.5
python_requires = >=3.6

[options.packages.find]
where=source
exclude=
    examples*
    docs*
    tests*